--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <audio id="tricou-firma" src="sounds/tricou-firma.m4a"></audio>
     <audio id="boo" src="boo.mp3"></audio>
     <audio id="9lei" src="sounds/9lei.m4a"></audio>
+    <audio id="Banana" src="sounds/Banana.m4a"></audio>
+    <audio id="Ras" src="sounds/Ras.m4a"></audio>
+    <audio id="Casa stark" src="sounds/Casa stark.m4a"></audio>
+    <audio id="Vine iarna" src="sounds/Vine Iarna.m4a"></audio>
+    <audio id="Hahaha" src="sounds/Hahaha.m4a"></audio>
     <audio id="Shery" src="sounds/Shery.m4a"></audio>
     <div class="container">
       <div class="center">
@@ -18,7 +23,17 @@
       </div>
     </div>
     <script type="text/javascript">
-      const sounds = ['tricou-firma', 'boo', '9lei', 'Shery']
+      const sounds = [
+        'tricou-firma', 
+        'boo', 
+        '9lei', 
+        'Shery', 
+        'Banana', 
+        'Ras', 
+        'Casa stark', 
+        'Vine iarna', 
+        'Hahaha'
+      ]
       sounds.forEach(sound => {
         const btn = document.createElement('button')
         btn.classList.add('btn')
