--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <audio id="Vine iarna" src="sounds/Vine iarna.m4a"></audio>
     <audio id="Hahaha" src="sounds/Hahaha.m4a"></audio>
     <audio id="Shery" src="sounds/Shery.m4a"></audio>
+    <audio id="divoushan" src="sounds/divoushan.m4a"></audio>
     <div class="container">
       <div class="center">
         <div id="buttons"></div>
@@ -24,15 +25,16 @@
     </div>
     <script type="text/javascript">
       const sounds = [
-        'tricou-firma', 
-        'boo', 
-        '9lei', 
-        'Shery', 
-        'Banana', 
-        'Ras', 
-        'Casa stark', 
-        'Vine iarna', 
-        'Hahaha'
+        'tricou-firma',
+        'boo',
+        '9lei',
+        'Shery',
+        'Banana',
+        'Ras',
+        'Casa stark',
+        'Vine iarna',
+        'Hahaha',
+        'divoushan'
       ]
       sounds.forEach(sound => {
         const btn = document.createElement('button')
