--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
   <body>
     <audio id="tricou-firma" src="sounds/tricou-firma.m4a"></audio>
-    <audio id="boo" src="boo.mp3"></audio>
     <audio id="9lei" src="sounds/9lei.m4a"></audio>
     <audio id="Banana" src="sounds/Banana.m4a"></audio>
     <audio id="Ras" src="sounds/Ras.m4a"></audio>
@@ -18,6 +17,15 @@
     <audio id="Hahaha" src="sounds/Hahaha.m4a"></audio>
     <audio id="Shery" src="sounds/Shery.m4a"></audio>
     <audio id="divoushan" src="sounds/divoushan.m4a"></audio>
+    <audio id="bbrkrv" src="sounds/bbrkrv.m4a"></audio>
+    <audio id="birouuuuuuu" src="sounds/birouuuuuuu.m4a"></audio>
+    <audio id="bnn-pl-kvr" src="sounds/bnn-pl-kvr.m4a"></audio>
+    <audio id="bober" src="sounds/bober.m4a"></audio>
+    <audio id="djsuciu" src="sounds/djsuciu.m4a"></audio>
+    <audio id="mcshpan" src="sounds/mcshpan.m4a"></audio>
+    <audio id="mo-kemat" src="sounds/mo-kemat.m4a"></audio>
+    <audio id="ora-domnului" src="sounds/ora-domnului.m4a"></audio>
+    <audio id="ya perdole" src="sounds/ya perdole.m4a"></audio>
     <div class="container">
       <div class="center">
         <div id="buttons"></div>
@@ -26,7 +34,6 @@
     <script type="text/javascript">
       const sounds = [
         'tricou-firma',
-        'boo',
         '9lei',
         'Shery',
         'Banana',
@@ -34,7 +41,16 @@
         'Casa stark',
         'Vine iarna',
         'Hahaha',
-        'divoushan'
+        'divoushan',
+        'bbrkrv',
+        'birouuuuuuu',
+        'bnn-pl-kvr',
+        'bober',
+        'djsuciu',
+        'mcshpan',
+        'mo-kemat',
+        'ora-domnului',
+        'ya perdole'
       ]
       sounds.forEach(sound => {
         const btn = document.createElement('button')
