--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <audio id="mo-kemat" src="sounds/mo-kemat.m4a"></audio>
     <audio id="ora-domnului" src="sounds/ora-domnului.m4a"></audio>
     <audio id="ya perdole" src="sounds/ya perdole.m4a"></audio>
+    <audio id="santetz-foarte-funny" src="sounds/santetz-foarte-funny.m4a"></audio>
+    <audio id="vapupwkndfain" src="sounds/vapupwkndfain.m4a"></audio>
     <div class="container">
       <div class="center">
         <div id="buttons"></div>
@@ -50,7 +52,9 @@
         'mcshpan',
         'mo-kemat',
         'ora-domnului',
-        'ya perdole'
+        'ya perdole',
+        'vapupwkndfain',
+        'santetz-foarte-funny'
       ]
       sounds.forEach(sound => {
         const btn = document.createElement('button')
