--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <audio id="ya perdole" src="sounds/ya perdole.m4a"></audio>
     <audio id="santetz-foarte-funny" src="sounds/santetz-foarte-funny.m4a"></audio>
     <audio id="vapupwkndfain" src="sounds/vapupwkndfain.m4a"></audio>
+    <audio id="tusit" src="sounds/tusit.m4a"></audio>
     <div class="container">
       <div class="center">
         <div id="buttons"></div>
@@ -54,7 +55,8 @@
         'ora-domnului',
         'ya perdole',
         'vapupwkndfain',
-        'santetz-foarte-funny'
+        'santetz-foarte-funny',
+        'tusit'
       ]
       sounds.forEach(sound => {
         const btn = document.createElement('button')
