--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <audio id="Shery" src="sounds/Shery.m4a"></audio>
     <audio id="divoushan" src="sounds/divoushan.m4a"></audio>
     <audio id="bbrkrv" src="sounds/bbrkrv.m4a"></audio>
-    <audio id="birouuuuuuu" src="sounds/birouuuuuuu.m4a"></audio>
+    <audio id="birouuuuuu" src="sounds/birouuuuuu.m4a"></audio>
     <audio id="bnn-pl-kvr" src="sounds/bnn-pl-kvr.m4a"></audio>
     <audio id="bober" src="sounds/bober.m4a"></audio>
     <audio id="djsuciu" src="sounds/djsuciu.m4a"></audio>
@@ -46,7 +46,7 @@
         'Hahaha',
         'divoushan',
         'bbrkrv',
-        'birouuuuuuu',
+        'birouuuuuu',
         'bnn-pl-kvr',
         'bober',
         'djsuciu',
@@ -62,7 +62,7 @@
         const btn = document.createElement('button')
         btn.classList.add('btn')
         btn.innerText = sound
-        btn.addEventListener('click', () => {
+        btn.addEventListener('click', (ev) => {
           stopSongs()
           document.getElementById(sound).play()
         })
