--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <audio id="santetz-foarte-funny" src="sounds/santetz-foarte-funny.m4a"></audio>
     <audio id="vapupwkndfain" src="sounds/vapupwkndfain.m4a"></audio>
     <audio id="tusit" src="sounds/tusit.m4a"></audio>
+    <audio id="alumulamu" src="sounds/alumulamu.m4a"></audio>
+    <audio id="helabausu" src="sounds/helabausu.m4a"></audio>
     <div class="container">
       <div class="center">
         <div id="buttons"></div>
@@ -56,7 +58,9 @@
         'ya perdole',
         'vapupwkndfain',
         'santetz-foarte-funny',
-        'tusit'
+        'tusit',
+        'helabausu',
+        'alumulamu'
       ]
       sounds.forEach(sound => {
         const btn = document.createElement('button')
