--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>TERAPIA PUBG SOUNDBOARD</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./src/styles.css" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
 
   <body>
