--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <audio id="tusit" src="sounds/tusit.m4a"></audio>
     <audio id="alumulamu" src="sounds/alumulamu.m4a"></audio>
     <audio id="helabausu" src="sounds/helabausu.m4a"></audio>
+    <audio id="sokey" src="sounds/sokey.m4a"></audio>
     <div class="container">
       <div class="center">
         <div id="buttons"></div>
@@ -59,7 +60,8 @@
         'santetz-foarte-funny',
         'tusit',
         'helabausu',
-        'alumulamu'
+        'alumulamu',
+        'sokey'
       ]
       sounds.forEach(sound => {
         const btn = document.createElement('button')
