added new sound

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <audio id="alumulamu" src="sounds/alumulamu.m4a"></audio>
     <audio id="helabausu" src="sounds/helabausu.m4a"></audio>
     <audio id="sokey" src="sounds/sokey.m4a"></audio>
+    <audio id="ppffsssss" src="sounds/ppffsssss.m4a"></audio>
     <div class="container">
       <div class="center">
         <div id="buttons"></div>
@@ -61,7 +62,8 @@
         'tusit',
         'helabausu',
         'alumulamu',
-        'sokey'
+        'sokey',
+        'ppffsssss'
       ]
       sounds.forEach(sound => {
         const btn = document.createElement('button')
